# xplayer

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/joyy/nativecpp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FFPlayerBuilder.cpp  IObserver.cpp  IObserver.h  IPlayer.cpp  IPlayer.h  IPlayerBuilder.cpp  IPlayerProxy.cpp  IPlayerProxy.h  Person.cpp  Person.h  XData.cpp  XData.h  XLog.cpp  XLog.h  XParameter.cpp  XParameter.h  XThread.cpp  XThread.h  native-lib.cpp
app/src/main/cpp/audio/: IAudioPlay.cpp  IAudioPlay.h  SLAudioPlay.cpp  SLAudioPlay.h
app/src/main/cpp/decode/: FFDecode.cpp  FFDecode.h  IDecode.cpp  IDecode.h
app/src/main/cpp/demux/: FFDemux.cpp  FFDemux.h  IDemux.cpp  IDemux.h
app/src/main/cpp/player/: FFPlayerBuilder.cpp  FFPlayerBuilder.h  IPlayer.cpp  IPlayer.h  IPlayerBuilder.cpp  IPlayerBuilder.h  IPlayerProxy.cpp
app/src/main/cpp/resample/: FFResample.cpp  FFResample.h  IResample.cpp  IResample.h
app/src/main/cpp/video/: GLVideoView.cpp  GLVideoView.h  IVideoView.cpp  IVideoView.h  XEGL.cpp  XEGL.h  XShader.cpp  XShader.h  XTexture.cpp  XTexture.h
app/src/main/java/com/joyy/nativecpp/: FPlay.java  GLPlayerActivity.java  MainActivity.java  PlayerActivity.java  Student.java  XPlay.java  XPlayer.java
app/src/main/java/com/joyy/nativecpp/glsurface/: GLPlayerActivity.java  GLVideoRenderer.java  WlShaderUtil.java
app/src/main/java/com/joyy/nativecpp/yuv/: YUVActivity.java  YUVPlayer.java
app/src/main/res/layout/: activity_glplayer.xml  activity_main.xml  activity_player.xml  activity_yuvactivity.xml
app/src/test/java/com/joyy/nativecpp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
